@@ -48,9 +48,9 @@
 #include <debug.h>
 
 #include <nuttx/arch.h>
-#include <nuttx/usb.h>
-#include <nuttx/usbdev.h>
-#include <nuttx/usbdev_trace.h>
+#include <nuttx/usb/usb.h>
+#include <nuttx/usb/usbdev.h>
+#include <nuttx/usb/usbdev_trace.h>
 
 #include <arch/irq.h>
 #include <arch/board/board.h>
