@@ -212,7 +212,7 @@ EXTERN int lpc313x_spicmddata(FAR struct spi_dev_s *dev, enum spi_dev_e devid, b
  * Description:
  *   If USB is supported and the board supports a pullup via GPIO (for USB software
  *   connect and disconnect), then the board software must provide lpc313x_pullup.
- *   See include/nuttx/usbdev.h for additional description of this method.
+ *   See include/nuttx/usb/usbdev.h for additional description of this method.
  *   Alternatively, if no pull-up GPIO the following EXTERN can be redefined to be
  *   NULL.
  *
