@@ -1,7 +1,7 @@
 /****************************************************************************
  * drivers/usbdev/usbdev_trprintf.c
  *
- *   Copyright (C) 2008-2009 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2008-2010 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -43,7 +43,7 @@
 #include <stdint.h>
 #include <debug.h>
 
-#include <nuttx/usbdev_trace.h>
+#include <nuttx/usb/usbdev_trace.h>
 
 /****************************************************************************
  * Definitions
